--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .header .img {
   width: 100%;
 }
-.header .more-inf {
+.header .more__inf {
   font-family: fantasy, cursive;
 }
 
@@ -24,7 +24,7 @@
   }
 
 }
-.main-container {
+.main__container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -34,7 +34,7 @@
   display: inline-block;
   flex-grow: 1;
 }
-.add-task {
+.add__task {
   display: flex;
 }
 .ul {
@@ -93,7 +93,7 @@
   display: block;
   margin: 0 0 20px;
 }
-.input#new-task {
+.input#new__task {
   width: 318px;
 }
 
@@ -132,7 +132,7 @@
 }
 
 /* Completed */
-.ul#completed-tasks .label {
+.ul#completed__tasks .label {
   text-decoration: line-through;
   color: #888;
 }
@@ -142,11 +142,11 @@
   display:none;
 }
 
-.ul .li.edit-mode .input[type= "text"] {
+.ul .li.edit__mode .input[type= "text"] {
   display: inline-block;
   width: 224px;
 }
 
-.ul .li.edit-mode .label {
+.ul .li.edit__mode .label {
   display: none;
 }
